// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Report stack matches the snapshot for CODE 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Reporting for mobile notifications",
  "Mappings": {
    "Constants": {
      "App": {
        "Value": "report",
      },
      "Stack": {
        "Value": "mobile-notifications",
      },
    },
    "StageVariables": {
      "CODE": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
      "PROD": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAllowPolicy",
      "GuAllowPolicy",
      "GuVpcParameter",
      "GuSubnetListParameter",
      "GuSubnetListParameter",
      "GuPlayApp",
      "GuDistributionBucketParameter",
      "GuCertificate",
      "GuInstanceRole",
      "GuSsmSshPolicy",
      "GuDescribeEC2Policy",
      "GuLoggingStreamNameParameter",
      "GuLogShippingPolicy",
      "GuGetDistributablePolicy",
      "GuParameterStoreReadPolicy",
      "GuAmiParameter",
      "GuHttpsEgressSecurityGroup",
      "GuAutoScalingGroup",
      "GuApplicationLoadBalancer",
      "GuAccessLoggingBucketParameter",
      "GuApplicationTargetGroup",
      "GuHttpsApplicationListener",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerReportDnsName": {
      "Description": "DNS entry for LoadBalancerReport",
      "Value": {
        "Fn::GetAtt": [
          "LoadBalancerReport58ECD9E7",
          "DNSName",
        ],
      },
    },
    "LoadBalancerUrl": {
      "Value": {
        "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
      },
    },
  },
  "Parameters": {
    "AMI": {
      "Description": "AMI used by the instances,",
      "Type": "AWS::EC2::Image::Id",
    },
    "AMIReport": {
      "Description": "Amazon Machine Image ID for the app report. Use this in conjunction with AMIgo to keep AMIs up to date.",
      "Type": "AWS::EC2::Image::Id",
    },
    "ASGMaxSize": {
      "Description": "Maximum size of the autoscaling group",
      "Type": "Number",
    },
    "ASGMinSize": {
      "Description": "Minimum size of the autoscaling group",
      "Type": "Number",
    },
    "AccessLoggingBucket": {
      "Default": "/account/services/access-logging/bucket",
      "Description": "S3 bucket to store your access logs",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "AppCertArn": {
      "Description": "ACM Certificate for app use",
      "Type": "String",
    },
    "DistBucket": {
      "Description": "The name of the s3 bucket containing the server artifact",
      "Type": "String",
    },
    "DistributionBucketName": {
      "AllowedValues": [
        "/account/services/artifact.bucket.n10n",
      ],
      "Default": "/account/services/artifact.bucket.n10n",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "DomainName": {
      "Description": "The domain name of the ELB, should contain the trailing dot stuff.zone.example.com.",
      "Type": "String",
    },
    "GuCdkVpcId": {
      "Default": "/account/vpc/primary/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "HostedZone": {
      "Description": "The HostedZone, should contain the trailing dot zone.example.com.",
      "Type": "String",
    },
    "LoggingStreamName": {
      "AllowedValues": [
        "/account/services/logging.stream.name.code",
      ],
      "Default": "/account/services/logging.stream.name.code",
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "PrivateSubnets": {
      "Description": "The private subnets of the VPC for the autoscaling group",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "PublicSubnets": {
      "Description": "The public subnets of the VPC for the loadbalancer",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Environment name",
      "Type": "String",
    },
    "VPCSecurityGroup": {
      "Description": "The default security group of the VPC",
      "Type": "AWS::EC2::SecurityGroup::Id",
    },
    "VpcId": {
      "Description": "The VPC",
      "Type": "AWS::EC2::VPC::Id",
    },
    "reportPrivateSubnets": {
      "Default": "/account/vpc/primary/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
    "reportPublicSubnets": {
      "Default": "/account/vpc/primary/subnets/public",
      "Description": "A list of public subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": {
    "AutoScalingGroupReportASG10642FDD": {
      "Properties": {
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchTemplate": {
          "LaunchTemplateId": {
            "Ref": "mobilenotificationsCODEreport785B3FAD",
          },
          "Version": {
            "Fn::GetAtt": [
              "mobilenotificationsCODEreport785B3FAD",
              "LatestVersionNumber",
            ],
          },
        },
        "MaxSize": "2",
        "MetricsCollection": [
          {
            "Granularity": "1Minute",
          },
        ],
        "MinSize": "1",
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "gu:riffraff:new-asg",
            "PropagateAtLaunch": true,
            "Value": "true",
          },
          {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": {
              "Ref": "LoggingStreamName",
            },
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "CODE",
          },
        ],
        "TargetGroupARNs": [
          {
            "Ref": "TargetGroupReport53648E3B",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "reportPrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "CertificateReportE388917B": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "DomainName": "report.notifications.code.dev-guardianapis.com",
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Name",
            "Value": "Report-CODE/CertificateReport",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
      "UpdateReplacePolicy": "Retain",
    },
    "CustomParameterStoreLocationAccess1FC71B2E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/notifications/CODE/mobile-notifications",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomParameterStoreLocationAccess1FC71B2E",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DescribeEC2PolicyFF5F9295": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeAutoScalingGroups",
                "ec2:DescribeTags",
                "ec2:DescribeInstances",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "describe-ec2-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DnsRecord": {
      "Properties": {
        "HostedZoneName": {
          "Ref": "HostedZone",
        },
        "Name": {
          "Ref": "DomainName",
        },
        "ResourceRecords": [
          {
            "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
          },
        ],
        "TTL": "60",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DynamoDbAccess14AC0B35": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:*",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:dynamodb:eu-west-1:",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":table/mobile-notifications-reports-CODE",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:dynamodb:eu-west-1:",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":table/mobile-notifications-reports-CODE/index/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DynamoDbAccess14AC0B35",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetDistributablePolicyReportA81F1F70": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    {
                      "Ref": "DistributionBucketName",
                    },
                    "/mobile-notifications/CODE/report/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetDistributablePolicyReportA81F1F70",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GuHttpsEgressSecurityGroupReport655D39E8": {
      "Properties": {
        "GroupDescription": "Allow all outbound HTTPS traffic",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound HTTPS traffic",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "GuCdkVpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "GuHttpsEgressSecurityGroupReportfromReportCODELoadBalancerReportSecurityGroup2A55957B9000E116A99E": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 9000,
        "GroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupReport655D39E8",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "LoadBalancerReportSecurityGroupCE1064B7",
            "GroupId",
          ],
        },
        "ToPort": 9000,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuLogShippingPolicy981BFE5A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "kinesis:Describe*",
                "kinesis:Put*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:kinesis:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":stream/",
                    {
                      "Ref": "LoggingStreamName",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuLogShippingPolicy981BFE5A",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InstanceRoleReport42223080": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Path": "/",
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "InstanceSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "SecurityGroupIngress": [
          {
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "LoadBalancerSecurityGroup",
            },
            "ToPort": 9000,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "ListenerReportB6CBA732": {
      "Properties": {
        "Certificates": [
          {
            "CertificateArn": {
              "Ref": "CertificateReportE388917B",
            },
          },
        ],
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroupReport53648E3B",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancerReport58ECD9E7",
        },
        "Port": 443,
        "Protocol": "HTTPS",
        "SslPolicy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "LoadBalancerReport58ECD9E7": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "true",
          },
          {
            "Key": "routing.http.x_amzn_tls_version_and_cipher_suite.enabled",
            "Value": "true",
          },
          {
            "Key": "routing.http.drop_invalid_header_fields.enabled",
            "Value": "true",
          },
          {
            "Key": "access_logs.s3.enabled",
            "Value": "true",
          },
          {
            "Key": "access_logs.s3.bucket",
            "Value": {
              "Ref": "AccessLoggingBucket",
            },
          },
          {
            "Key": "access_logs.s3.prefix",
            "Value": "application-load-balancer/CODE/mobile-notifications/report",
          },
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "LoadBalancerReportSecurityGroupCE1064B7",
              "GroupId",
            ],
          },
        ],
        "Subnets": {
          "Ref": "reportPublicSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "LoadBalancerReportSecurityGroupCE1064B7": {
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB ReportCODELoadBalancerReport3BEFB6A3",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 443",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "GuCdkVpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerReportSecurityGrouptoReportCODEGuHttpsEgressSecurityGroupReportAD47F8039000CCA271A5": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupReport655D39E8",
            "GroupId",
          ],
        },
        "FromPort": 9000,
        "GroupId": {
          "Fn::GetAtt": [
            "LoadBalancerReportSecurityGroupCE1064B7",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 9000,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "LoadBalancerSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "ToPort": 9000,
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerToPrivateASG": {
      "Properties": {
        "CrossZone": true,
        "HealthCheck": {
          "HealthyThreshold": "2",
          "Interval": "30",
          "Target": "HTTP:9000/healthcheck",
          "Timeout": "10",
          "UnhealthyThreshold": "10",
        },
        "Listeners": [
          {
            "InstancePort": "9000",
            "LoadBalancerPort": "443",
            "Protocol": "HTTPS",
            "SSLCertificateId": {
              "Ref": "AppCertArn",
            },
          },
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup",
          },
        ],
        "Subnets": {
          "Ref": "PublicSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
    },
    "NotificationsReportInstanceProfile": {
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "NotificationsReportRole",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "NotificationsReportRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com",
                ],
              },
            },
          ],
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:aws:iam::\${AWS::AccountId}:policy/ssm-scala-v1",
          },
        ],
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:GetObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:s3:::\${DistBucket}/*",
                  },
                },
                {
                  "Action": "ec2:DescribeTags",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "cloudwatch:*",
                    "logs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "autoscaling:DescribeAutoScalingInstances",
                    "autoscaling:DescribeAutoScalingGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "kinesis:PutRecord",
                    "kinesis:PutRecords",
                    "kinesis:DescribeStream",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:kinesis:\${AWS::Region}:\${AWS::AccountId}:stream/mobile-log-aggregation-\${Stage}",
                  },
                },
              ],
            },
            "PolicyName": "root",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "dynamodb:*",
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}",
                    },
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}/index/*",
                    },
                  ],
                },
              ],
            },
            "PolicyName": "dynamo",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ssm:GetParametersByPath",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": [
                      "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/notifications/\${Stage}/\${Stack}",
                      {
                        "Stack": {
                          "Fn::FindInMap": [
                            "Constants",
                            "Stack",
                            "Value",
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "PolicyName": "conf",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ParameterStoreReadReportC08D3188": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/report",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/mobile-notifications/report/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "parameter-store-read-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PrivateReportAutoscalingGroup": {
      "Properties": {
        "AvailabilityZones": {
          "Fn::GetAZs": "",
        },
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchConfigurationName": {
          "Ref": "ReportLaunchConfig",
        },
        "LoadBalancerNames": [
          {
            "Ref": "LoadBalancerToPrivateASG",
          },
        ],
        "MaxSize": {
          "Ref": "ASGMaxSize",
        },
        "MinSize": {
          "Ref": "ASGMinSize",
        },
        "NotificationConfiguration": {
          "NotificationTypes": [
            "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
            "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
          ],
          "TopicARN": {
            "Fn::Sub": "arn:aws:sns:eu-west-1:\${AWS::AccountId}:AutoscalingNotifications\${Stage}",
          },
        },
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "CODE",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "PrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "ReportLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": false,
        "IamInstanceProfile": {
          "Ref": "NotificationsReportInstanceProfile",
        },
        "ImageId": {
          "Ref": "AMI",
        },
        "InstanceType": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "InstanceType",
          ],
        },
        "MetadataOptions": {
          "HttpTokens": "required",
        },
        "SecurityGroups": [
          {
            "Ref": "InstanceSecurityGroup",
          },
          {
            "Ref": "VPCSecurityGroup",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": [
              "#!/bin/bash -ev
aws --region \${AWS::Region} s3 cp s3://\${DistBucket}/\${Stack}/\${Stage}/\${App}/\${App}_1.0-latest_all.deb /tmp
dpkg -i /tmp/\${App}_1.0-latest_all.deb
/opt/aws-kinesis-agent/configure-aws-kinesis-agent \${AWS::Region} mobile-log-aggregation-\${Stage} /var/log/\${App}/application.log
",
              {
                "App": {
                  "Fn::FindInMap": [
                    "Constants",
                    "App",
                    "Value",
                  ],
                },
                "Stack": {
                  "Fn::FindInMap": [
                    "Constants",
                    "Stack",
                    "Value",
                  ],
                },
              },
            ],
          },
        },
      },
      "Type": "AWS::AutoScaling::LaunchConfiguration",
    },
    "SsmSshPolicy4CFC977E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ec2messages:AcknowledgeMessage",
                "ec2messages:DeleteMessage",
                "ec2messages:FailMessage",
                "ec2messages:GetEndpoint",
                "ec2messages:GetMessages",
                "ec2messages:SendReply",
                "ssm:UpdateInstanceInformation",
                "ssm:ListInstanceAssociations",
                "ssm:DescribeInstanceProperties",
                "ssm:DescribeDocumentParameters",
                "ssmmessages:CreateControlChannel",
                "ssmmessages:CreateDataChannel",
                "ssmmessages:OpenControlChannel",
                "ssmmessages:OpenDataChannel",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ssm-ssh-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TargetGroupReport53648E3B": {
      "Properties": {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/healthcheck",
        "HealthCheckProtocol": "HTTP",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 5,
        "Port": 9000,
        "Protocol": "HTTP",
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "instance",
        "UnhealthyThresholdCount": 2,
        "VpcId": {
          "Ref": "GuCdkVpcId",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "mobilenotificationsCODEreport785B3FAD": {
      "DependsOn": [
        "InstanceRoleReport42223080",
      ],
      "Properties": {
        "LaunchTemplateData": {
          "IamInstanceProfile": {
            "Arn": {
              "Fn::GetAtt": [
                "mobilenotificationsCODEreportProfileB36366A9",
                "Arn",
              ],
            },
          },
          "ImageId": {
            "Ref": "AMIReport",
          },
          "InstanceType": "t4g.micro",
          "MetadataOptions": {
            "HttpTokens": "required",
            "InstanceMetadataTags": "enabled",
          },
          "Monitoring": {
            "Enabled": false,
          },
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "GuHttpsEgressSecurityGroupReport655D39E8",
                "GroupId",
              ],
            },
          ],
          "TagSpecifications": [
            {
              "ResourceType": "instance",
              "Tags": [
                {
                  "Key": "App",
                  "Value": "report",
                },
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/mobile-n10n",
                },
                {
                  "Key": "Name",
                  "Value": "Report-CODE/mobile-notifications-CODE-report",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile-notifications",
                },
                {
                  "Key": "Stage",
                  "Value": "CODE",
                },
              ],
            },
            {
              "ResourceType": "volume",
              "Tags": [
                {
                  "Key": "App",
                  "Value": "report",
                },
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/mobile-n10n",
                },
                {
                  "Key": "Name",
                  "Value": "Report-CODE/mobile-notifications-CODE-report",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile-notifications",
                },
                {
                  "Key": "Stage",
                  "Value": "CODE",
                },
              ],
            },
          ],
          "UserData": {
            "Fn::Base64": {
              "Fn::Join": [
                "",
                [
                  "#!/bin/bash
mkdir -p $(dirname '/report/report-_1.0-latest_all.deb')
aws s3 cp 's3://",
                  {
                    "Ref": "DistributionBucketName",
                  },
                  "/mobile-notifications/CODE/report/report-_1.0-latest_all.deb' '/report/report-_1.0-latest_all.deb'
dpkg -i report-_1.0-latest_all.deb
/opt/aws-kinesis-agent/configure-aws-kinesis-agent eu-west-1 mobile-log-aggregation-CODE /var/log/report/application.log",
                ],
              ],
            },
          },
        },
        "TagSpecifications": [
          {
            "ResourceType": "launch-template",
            "Tags": [
              {
                "Key": "App",
                "Value": "report",
              },
              {
                "Key": "gu:cdk:version",
                "Value": "TEST",
              },
              {
                "Key": "gu:repo",
                "Value": "guardian/mobile-n10n",
              },
              {
                "Key": "Name",
                "Value": "Report-CODE/mobile-notifications-CODE-report",
              },
              {
                "Key": "Stack",
                "Value": "mobile-notifications",
              },
              {
                "Key": "Stage",
                "Value": "CODE",
              },
            ],
          },
        ],
      },
      "Type": "AWS::EC2::LaunchTemplate",
    },
    "mobilenotificationsCODEreportProfileB36366A9": {
      "Properties": {
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
  },
}
`;

exports[`The Report stack matches the snapshot for PROD 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Reporting for mobile notifications",
  "Mappings": {
    "Constants": {
      "App": {
        "Value": "report",
      },
      "Stack": {
        "Value": "mobile-notifications",
      },
    },
    "StageVariables": {
      "CODE": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
      "PROD": {
        "InstanceType": "t4g.micro",
        "NotificationAlarmPeriod": 1200,
      },
    },
  },
  "Metadata": {
    "gu:cdk:constructs": [
      "GuAllowPolicy",
      "GuAllowPolicy",
      "GuVpcParameter",
      "GuSubnetListParameter",
      "GuSubnetListParameter",
      "GuPlayApp",
      "GuDistributionBucketParameter",
      "GuCertificate",
      "GuInstanceRole",
      "GuSsmSshPolicy",
      "GuDescribeEC2Policy",
      "GuLoggingStreamNameParameter",
      "GuLogShippingPolicy",
      "GuGetDistributablePolicy",
      "GuParameterStoreReadPolicy",
      "GuAmiParameter",
      "GuHttpsEgressSecurityGroup",
      "GuAutoScalingGroup",
      "GuApplicationLoadBalancer",
      "GuAccessLoggingBucketParameter",
      "GuApplicationTargetGroup",
      "GuHttpsApplicationListener",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "LoadBalancerReportDnsName": {
      "Description": "DNS entry for LoadBalancerReport",
      "Value": {
        "Fn::GetAtt": [
          "LoadBalancerReport58ECD9E7",
          "DNSName",
        ],
      },
    },
    "LoadBalancerUrl": {
      "Value": {
        "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
      },
    },
  },
  "Parameters": {
    "AMI": {
      "Description": "AMI used by the instances,",
      "Type": "AWS::EC2::Image::Id",
    },
    "AMIReport": {
      "Description": "Amazon Machine Image ID for the app report. Use this in conjunction with AMIgo to keep AMIs up to date.",
      "Type": "AWS::EC2::Image::Id",
    },
    "ASGMaxSize": {
      "Description": "Maximum size of the autoscaling group",
      "Type": "Number",
    },
    "ASGMinSize": {
      "Description": "Minimum size of the autoscaling group",
      "Type": "Number",
    },
    "AccessLoggingBucket": {
      "Default": "/account/services/access-logging/bucket",
      "Description": "S3 bucket to store your access logs",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "AppCertArn": {
      "Description": "ACM Certificate for app use",
      "Type": "String",
    },
    "DistBucket": {
      "Description": "The name of the s3 bucket containing the server artifact",
      "Type": "String",
    },
    "DistributionBucketName": {
      "AllowedValues": [
        "/account/services/artifact.bucket.n10n",
      ],
      "Default": "/account/services/artifact.bucket.n10n",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "DomainName": {
      "Description": "The domain name of the ELB, should contain the trailing dot stuff.zone.example.com.",
      "Type": "String",
    },
    "GuCdkVpcId": {
      "Default": "/account/vpc/primary/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "HostedZone": {
      "Description": "The HostedZone, should contain the trailing dot zone.example.com.",
      "Type": "String",
    },
    "LoggingStreamName": {
      "AllowedValues": [
        "/account/services/logging.stream.name",
      ],
      "Default": "/account/services/logging.stream.name",
      "Description": "SSM parameter containing the Name (not ARN) on the kinesis stream",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "PrivateSubnets": {
      "Description": "The private subnets of the VPC for the autoscaling group",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "PublicSubnets": {
      "Description": "The public subnets of the VPC for the loadbalancer",
      "Type": "List<AWS::EC2::Subnet::Id>",
    },
    "Stage": {
      "AllowedValues": [
        "CODE",
        "PROD",
      ],
      "Description": "Environment name",
      "Type": "String",
    },
    "VPCSecurityGroup": {
      "Description": "The default security group of the VPC",
      "Type": "AWS::EC2::SecurityGroup::Id",
    },
    "VpcId": {
      "Description": "The VPC",
      "Type": "AWS::EC2::VPC::Id",
    },
    "reportPrivateSubnets": {
      "Default": "/account/vpc/primary/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
    "reportPublicSubnets": {
      "Default": "/account/vpc/primary/subnets/public",
      "Description": "A list of public subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": {
    "AutoScalingGroupReportASG10642FDD": {
      "Properties": {
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchTemplate": {
          "LaunchTemplateId": {
            "Ref": "mobilenotificationsPRODreportC3AAE58A",
          },
          "Version": {
            "Fn::GetAtt": [
              "mobilenotificationsPRODreportC3AAE58A",
              "LatestVersionNumber",
            ],
          },
        },
        "MaxSize": "6",
        "MetricsCollection": [
          {
            "Granularity": "1Minute",
          },
        ],
        "MinSize": "3",
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "gu:riffraff:new-asg",
            "PropagateAtLaunch": true,
            "Value": "true",
          },
          {
            "Key": "LogKinesisStreamName",
            "PropagateAtLaunch": true,
            "Value": {
              "Ref": "LoggingStreamName",
            },
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "PROD",
          },
        ],
        "TargetGroupARNs": [
          {
            "Ref": "TargetGroupReport53648E3B",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "reportPrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "CertificateReportE388917B": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "DomainName": "report.notifications.guardianapis.com",
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Name",
            "Value": "Report-PROD/CertificateReport",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "ValidationMethod": "DNS",
      },
      "Type": "AWS::CertificateManager::Certificate",
      "UpdateReplacePolicy": "Retain",
    },
    "CustomParameterStoreLocationAccess1FC71B2E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/notifications/PROD/mobile-notifications",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomParameterStoreLocationAccess1FC71B2E",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DescribeEC2PolicyFF5F9295": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "autoscaling:DescribeAutoScalingInstances",
                "autoscaling:DescribeAutoScalingGroups",
                "ec2:DescribeTags",
                "ec2:DescribeInstances",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "describe-ec2-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DnsRecord": {
      "Properties": {
        "HostedZoneName": {
          "Ref": "HostedZone",
        },
        "Name": {
          "Ref": "DomainName",
        },
        "ResourceRecords": [
          {
            "Fn::GetAtt": "LoadBalancerToPrivateASG.DNSName",
          },
        ],
        "TTL": "60",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DynamoDbAccess14AC0B35": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:*",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:dynamodb:eu-west-1:",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":table/mobile-notifications-reports-PROD",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:dynamodb:eu-west-1:",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":table/mobile-notifications-reports-PROD/index/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DynamoDbAccess14AC0B35",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetDistributablePolicyReportA81F1F70": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:s3:::",
                    {
                      "Ref": "DistributionBucketName",
                    },
                    "/mobile-notifications/PROD/report/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetDistributablePolicyReportA81F1F70",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GuHttpsEgressSecurityGroupReport655D39E8": {
      "Properties": {
        "GroupDescription": "Allow all outbound HTTPS traffic",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound HTTPS traffic",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "GuCdkVpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "GuHttpsEgressSecurityGroupReportfromReportPRODLoadBalancerReportSecurityGroupF0C429B1900000B27E42": {
      "Properties": {
        "Description": "Load balancer to target",
        "FromPort": 9000,
        "GroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupReport655D39E8",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "LoadBalancerReportSecurityGroupCE1064B7",
            "GroupId",
          ],
        },
        "ToPort": 9000,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
    "GuLogShippingPolicy981BFE5A": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "kinesis:Describe*",
                "kinesis:Put*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:kinesis:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":stream/",
                    {
                      "Ref": "LoggingStreamName",
                    },
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GuLogShippingPolicy981BFE5A",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "InstanceRoleReport42223080": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Path": "/",
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "InstanceSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80,
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "SecurityGroupIngress": [
          {
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "SourceSecurityGroupId": {
              "Ref": "LoadBalancerSecurityGroup",
            },
            "ToPort": 9000,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "ListenerReportB6CBA732": {
      "Properties": {
        "Certificates": [
          {
            "CertificateArn": {
              "Ref": "CertificateReportE388917B",
            },
          },
        ],
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "TargetGroupReport53648E3B",
            },
            "Type": "forward",
          },
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancerReport58ECD9E7",
        },
        "Port": 443,
        "Protocol": "HTTPS",
        "SslPolicy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
      },
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
    },
    "LoadBalancerReport58ECD9E7": {
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "true",
          },
          {
            "Key": "routing.http.x_amzn_tls_version_and_cipher_suite.enabled",
            "Value": "true",
          },
          {
            "Key": "routing.http.drop_invalid_header_fields.enabled",
            "Value": "true",
          },
          {
            "Key": "access_logs.s3.enabled",
            "Value": "true",
          },
          {
            "Key": "access_logs.s3.bucket",
            "Value": {
              "Ref": "AccessLoggingBucket",
            },
          },
          {
            "Key": "access_logs.s3.prefix",
            "Value": "application-load-balancer/PROD/mobile-notifications/report",
          },
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "LoadBalancerReportSecurityGroupCE1064B7",
              "GroupId",
            ],
          },
        ],
        "Subnets": {
          "Ref": "reportPublicSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Type": "application",
      },
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
    },
    "LoadBalancerReportSecurityGroupCE1064B7": {
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB ReportPRODLoadBalancerReportE9D34E38",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 443",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "GuCdkVpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerReportSecurityGrouptoReportPRODGuHttpsEgressSecurityGroupReport0A4790A690002FD44694": {
      "Properties": {
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "GuHttpsEgressSecurityGroupReport655D39E8",
            "GroupId",
          ],
        },
        "FromPort": 9000,
        "GroupId": {
          "Fn::GetAtt": [
            "LoadBalancerReportSecurityGroupCE1064B7",
            "GroupId",
          ],
        },
        "IpProtocol": "tcp",
        "ToPort": 9000,
      },
      "Type": "AWS::EC2::SecurityGroupEgress",
    },
    "LoadBalancerSecurityGroup": {
      "Properties": {
        "GroupDescription": "Open up HTTP access to load balancer",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 9000,
            "IpProtocol": "tcp",
            "ToPort": 9000,
          },
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": 443,
            "IpProtocol": "tcp",
            "ToPort": 443,
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcId": {
          "Ref": "VpcId",
        },
      },
      "Type": "AWS::EC2::SecurityGroup",
    },
    "LoadBalancerToPrivateASG": {
      "Properties": {
        "CrossZone": true,
        "HealthCheck": {
          "HealthyThreshold": "2",
          "Interval": "30",
          "Target": "HTTP:9000/healthcheck",
          "Timeout": "10",
          "UnhealthyThreshold": "10",
        },
        "Listeners": [
          {
            "InstancePort": "9000",
            "LoadBalancerPort": "443",
            "Protocol": "HTTPS",
            "SSLCertificateId": {
              "Ref": "AppCertArn",
            },
          },
        ],
        "SecurityGroups": [
          {
            "Ref": "LoadBalancerSecurityGroup",
          },
        ],
        "Subnets": {
          "Ref": "PublicSubnets",
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
    },
    "NotificationsReportInstanceProfile": {
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "NotificationsReportRole",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
    "NotificationsReportRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com",
                ],
              },
            },
          ],
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:aws:iam::\${AWS::AccountId}:policy/ssm-scala-v1",
          },
        ],
        "Path": "/",
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "s3:GetObject",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:s3:::\${DistBucket}/*",
                  },
                },
                {
                  "Action": "ec2:DescribeTags",
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "cloudwatch:*",
                    "logs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "autoscaling:DescribeAutoScalingInstances",
                    "autoscaling:DescribeAutoScalingGroups",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "kinesis:PutRecord",
                    "kinesis:PutRecords",
                    "kinesis:DescribeStream",
                  ],
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": "arn:aws:kinesis:\${AWS::Region}:\${AWS::AccountId}:stream/mobile-log-aggregation-\${Stage}",
                  },
                },
              ],
            },
            "PolicyName": "root",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "dynamodb:*",
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}",
                    },
                    {
                      "Fn::Sub": "arn:aws:dynamodb:eu-west-1:\${AWS::AccountId}:table/mobile-notifications-reports-\${Stage}/index/*",
                    },
                  ],
                },
              ],
            },
            "PolicyName": "dynamo",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ssm:GetParametersByPath",
                  "Effect": "Allow",
                  "Resource": {
                    "Fn::Sub": [
                      "arn:aws:ssm:\${AWS::Region}:\${AWS::AccountId}:parameter/notifications/\${Stage}/\${Stack}",
                      {
                        "Stack": {
                          "Fn::FindInMap": [
                            "Constants",
                            "Stack",
                            "Value",
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "PolicyName": "conf",
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ParameterStoreReadReportC08D3188": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/report",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/mobile-notifications/report/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "parameter-store-read-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PrivateReportAutoscalingGroup": {
      "Properties": {
        "AvailabilityZones": {
          "Fn::GetAZs": "",
        },
        "HealthCheckGracePeriod": 400,
        "HealthCheckType": "ELB",
        "LaunchConfigurationName": {
          "Ref": "ReportLaunchConfig",
        },
        "LoadBalancerNames": [
          {
            "Ref": "LoadBalancerToPrivateASG",
          },
        ],
        "MaxSize": {
          "Ref": "ASGMaxSize",
        },
        "MinSize": {
          "Ref": "ASGMinSize",
        },
        "NotificationConfiguration": {
          "NotificationTypes": [
            "autoscaling:EC2_INSTANCE_LAUNCH_ERROR",
            "autoscaling:EC2_INSTANCE_TERMINATE_ERROR",
          ],
          "TopicARN": {
            "Fn::Sub": "arn:aws:sns:eu-west-1:\${AWS::AccountId}:AutoscalingNotifications\${Stage}",
          },
        },
        "Tags": [
          {
            "Key": "App",
            "PropagateAtLaunch": true,
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "PropagateAtLaunch": true,
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "PropagateAtLaunch": true,
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "PropagateAtLaunch": true,
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "PropagateAtLaunch": true,
            "Value": "PROD",
          },
        ],
        "VPCZoneIdentifier": {
          "Ref": "PrivateSubnets",
        },
      },
      "Type": "AWS::AutoScaling::AutoScalingGroup",
    },
    "ReportLaunchConfig": {
      "Properties": {
        "AssociatePublicIpAddress": false,
        "IamInstanceProfile": {
          "Ref": "NotificationsReportInstanceProfile",
        },
        "ImageId": {
          "Ref": "AMI",
        },
        "InstanceType": {
          "Fn::FindInMap": [
            "StageVariables",
            {
              "Ref": "Stage",
            },
            "InstanceType",
          ],
        },
        "MetadataOptions": {
          "HttpTokens": "required",
        },
        "SecurityGroups": [
          {
            "Ref": "InstanceSecurityGroup",
          },
          {
            "Ref": "VPCSecurityGroup",
          },
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Sub": [
              "#!/bin/bash -ev
aws --region \${AWS::Region} s3 cp s3://\${DistBucket}/\${Stack}/\${Stage}/\${App}/\${App}_1.0-latest_all.deb /tmp
dpkg -i /tmp/\${App}_1.0-latest_all.deb
/opt/aws-kinesis-agent/configure-aws-kinesis-agent \${AWS::Region} mobile-log-aggregation-\${Stage} /var/log/\${App}/application.log
",
              {
                "App": {
                  "Fn::FindInMap": [
                    "Constants",
                    "App",
                    "Value",
                  ],
                },
                "Stack": {
                  "Fn::FindInMap": [
                    "Constants",
                    "Stack",
                    "Value",
                  ],
                },
              },
            ],
          },
        },
      },
      "Type": "AWS::AutoScaling::LaunchConfiguration",
    },
    "SsmSshPolicy4CFC977E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ec2messages:AcknowledgeMessage",
                "ec2messages:DeleteMessage",
                "ec2messages:FailMessage",
                "ec2messages:GetEndpoint",
                "ec2messages:GetMessages",
                "ec2messages:SendReply",
                "ssm:UpdateInstanceInformation",
                "ssm:ListInstanceAssociations",
                "ssm:DescribeInstanceProperties",
                "ssm:DescribeDocumentParameters",
                "ssmmessages:CreateControlChannel",
                "ssmmessages:CreateDataChannel",
                "ssmmessages:OpenControlChannel",
                "ssmmessages:OpenDataChannel",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ssm-ssh-policy",
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TargetGroupReport53648E3B": {
      "Properties": {
        "HealthCheckIntervalSeconds": 10,
        "HealthCheckPath": "/healthcheck",
        "HealthCheckProtocol": "HTTP",
        "HealthCheckTimeoutSeconds": 5,
        "HealthyThresholdCount": 5,
        "Port": 9000,
        "Protocol": "HTTP",
        "Tags": [
          {
            "Key": "App",
            "Value": "report",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "30",
          },
          {
            "Key": "stickiness.enabled",
            "Value": "false",
          },
        ],
        "TargetType": "instance",
        "UnhealthyThresholdCount": 2,
        "VpcId": {
          "Ref": "GuCdkVpcId",
        },
      },
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
    },
    "mobilenotificationsPRODreportC3AAE58A": {
      "DependsOn": [
        "InstanceRoleReport42223080",
      ],
      "Properties": {
        "LaunchTemplateData": {
          "IamInstanceProfile": {
            "Arn": {
              "Fn::GetAtt": [
                "mobilenotificationsPRODreportProfileF49278FC",
                "Arn",
              ],
            },
          },
          "ImageId": {
            "Ref": "AMIReport",
          },
          "InstanceType": "t4g.micro",
          "MetadataOptions": {
            "HttpTokens": "required",
            "InstanceMetadataTags": "enabled",
          },
          "Monitoring": {
            "Enabled": true,
          },
          "SecurityGroupIds": [
            {
              "Fn::GetAtt": [
                "GuHttpsEgressSecurityGroupReport655D39E8",
                "GroupId",
              ],
            },
          ],
          "TagSpecifications": [
            {
              "ResourceType": "instance",
              "Tags": [
                {
                  "Key": "App",
                  "Value": "report",
                },
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/mobile-n10n",
                },
                {
                  "Key": "Name",
                  "Value": "Report-PROD/mobile-notifications-PROD-report",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile-notifications",
                },
                {
                  "Key": "Stage",
                  "Value": "PROD",
                },
              ],
            },
            {
              "ResourceType": "volume",
              "Tags": [
                {
                  "Key": "App",
                  "Value": "report",
                },
                {
                  "Key": "gu:cdk:version",
                  "Value": "TEST",
                },
                {
                  "Key": "gu:repo",
                  "Value": "guardian/mobile-n10n",
                },
                {
                  "Key": "Name",
                  "Value": "Report-PROD/mobile-notifications-PROD-report",
                },
                {
                  "Key": "Stack",
                  "Value": "mobile-notifications",
                },
                {
                  "Key": "Stage",
                  "Value": "PROD",
                },
              ],
            },
          ],
          "UserData": {
            "Fn::Base64": {
              "Fn::Join": [
                "",
                [
                  "#!/bin/bash
mkdir -p $(dirname '/report/report-_1.0-latest_all.deb')
aws s3 cp 's3://",
                  {
                    "Ref": "DistributionBucketName",
                  },
                  "/mobile-notifications/PROD/report/report-_1.0-latest_all.deb' '/report/report-_1.0-latest_all.deb'
dpkg -i report-_1.0-latest_all.deb
/opt/aws-kinesis-agent/configure-aws-kinesis-agent eu-west-1 mobile-log-aggregation-PROD /var/log/report/application.log",
                ],
              ],
            },
          },
        },
        "TagSpecifications": [
          {
            "ResourceType": "launch-template",
            "Tags": [
              {
                "Key": "App",
                "Value": "report",
              },
              {
                "Key": "gu:cdk:version",
                "Value": "TEST",
              },
              {
                "Key": "gu:repo",
                "Value": "guardian/mobile-n10n",
              },
              {
                "Key": "Name",
                "Value": "Report-PROD/mobile-notifications-PROD-report",
              },
              {
                "Key": "Stack",
                "Value": "mobile-notifications",
              },
              {
                "Key": "Stage",
                "Value": "PROD",
              },
            ],
          },
        ],
      },
      "Type": "AWS::EC2::LaunchTemplate",
    },
    "mobilenotificationsPRODreportProfileF49278FC": {
      "Properties": {
        "Roles": [
          {
            "Ref": "InstanceRoleReport42223080",
          },
        ],
      },
      "Type": "AWS::IAM::InstanceProfile",
    },
  },
}
`;
